Update with new service and view